Update README with instructions for compiling and running the program, including special flags for preview features. Add comments detailing where spec has been met across different classes.